@@ -782,6 +782,8 @@ $ #Общие команды#
 текущему содержанию Буфера Обмена, #Esc# отменяет пометку и завершает операцию.
   Комбинация #Ctrl-A# выделяет всю экранную область.
   Комбинация #Ctrl-U# снимает выделение.
+  #Ctrl-Shift-Left# и #Ctrl-Shift-Right# - перемещение с выделением на 10 позиций по горизонтали,
+  #Ctrl-Shift-Up# и #Ctrl-Shift-Down# - перемещение с выделением на 5 позиций по вертикали.
 
  #Клавиатурные Макрокоманды#
 
